--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "react-test-renderer": "^18.2.0",
     "web-vitals": "^3.1.0"
   },
   "jest": {
@@ -50,6 +49,9 @@
   "devDependencies": {
     "@testing-library/dom": "^8.19.0",
     "@testing-library/react": "^13.4.0",
-    "axios": "^1.2.1"
+    "axios": "^1.2.1",
+    "jest": "^29.3.1",
+    "jest-watch-typeahead": "^0.6.5",
+    "react-test-renderer": "^18.2.0"
   }
 }
