--- a/package.json
+++ b/package.json
@@ -47,9 +47,12 @@
     ]
   },
   "devDependencies": {
+    "@cfaester/enzyme-adapter-react-18": "^0.6.0",
     "@testing-library/dom": "^8.19.0",
     "@testing-library/react": "^13.4.0",
     "axios": "^1.2.1",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.7",
     "jest": "^29.3.1",
     "jest-watch-typeahead": "^0.6.5",
     "react-test-renderer": "^18.2.0"
